--- a/client/public/index.html
+++ b/client/public/index.html
@@ -50,153 +50,156 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- JSON-LD Structured Data -->
-    <script type="application/ld+json">
-    [
-      {
-        "@context": "https://schema.org",
-        "@type": "Organization",
-        "@id": "https://bcbcarts.com#organization",
-        "name": "BCB Carts",
-        "alternateName": [
-          "bcbcarts",
-          "BCB Carts"
-        ],
-        "slogan": "Your Trusted Partner in Leisure-Filled Electric Vehicles",
-        "url": "https://bcbcarts.com",
-        "logo": "https://www.bcbcarts.com/BCBLogo.jpg",
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+1-323-333-3471",
-          "contactType": "Customer Service",
-          "areaServed": [
-            "Long Beach",
-            "Seal Beach",
-            "Huntington Beach",
-            "San Pedro",
-            "Lakewood",
-            "Irvine",
-            "Anaheim",
-            "Santa Ana",
-            "Newport Beach",
-            "Costa Mesa",
-            "Cypress",
-            "Buena Park",
-            "La Palma",
-            "La Mirada",
-            "Fullerton",
-            "Garden Grove",
-            "Tustin",
-            "Brea",
-            "La Habra",
-            "Westminster",
-            "Placentia",
-            "Bellflower",
-            "Downey",
-            "Paramount"
+     <style>.navbar{background:#fff;border-top:6px solid #2c6f55;height:65px;display:flex;align-items:center;padding:0 1rem;position:relative;margin-top:-6px}.navbar-container{display:flex;justify-content:space-between;align-items:center;width:100%;max-width:1200px;margin:0 auto}.navbar-brand{display:flex;align-items:center}.navbar-logo img{height:85px;cursor:pointer}.company-name-desktop{cursor:pointer;display: block;margin-left: 1rem;font-size: 1.2rem;font-weight: bold;color: #333;}.menu-icon{display:flex;flex-direction:column;justify-content:space-between;height:20px;cursor:pointer}.bar{width:30px;height:4px;background-color:#333;margin:3px 0;transition:0.4s}.bar.change:nth-child(1){transform:translateY(7px) rotate(45deg)}.bar.change:nth-child(2){opacity:0}.bar.change:nth-child(3){transform:translateY(-7px) rotate(-45deg)}.nav-menu{display:none;flex-direction:column;position:absolute;top:65px;left:0;width:100%;background-color:#7ea19f;padding:2rem 0;margin-top:0px;box-sizing:border-box;z-index:999}.nav-menu.active{display:flex;align-items:center}.nav-item{list-style:none;width:100%;text-align:center;color:#fff;font-size:1.75rem;font-weight:500;padding:1rem 0;cursor:pointer;transition:color 0.3s}.nav-item:hover{color:#c5c5c5}.sub-nav-menu{display:none;list-style:none;padding:0;margin-top:10px;background:#6b8a82;border-radius:5px;width:90%;margin:0.5rem auto}.sub-nav-menu.show{display:block}.sub-nav-item{padding:10px 0;text-align:center;color:#fff;font-size:1.5rem;cursor:pointer;transition:background 0.3s}.sub-nav-item:hover{background:#5a7872}@media (min-width:769px){.navbar{height:85px}.company-name-desktop{display:block;margin-left:1rem;font-size:1.2rem;font-weight:bold;color:#333}.menu-icon{display:none}.nav-menu{display:flex!important;position:static;flex-direction:row;background:none;width:auto;padding:0;margin:0;align-items:center;justify-content:flex-end}.nav-item{color:#333;font-size:1.1rem;font-weight:500;padding:0;margin-left:2.5rem;width:auto;text-align:left;position:relative}.nav-item:hover{color:#4a8f78}.home-link::after{content:"";position:absolute;width:100%;height:2px;background:#000;bottom:-4px;left:0}.services-link{color:inherit!important;position:relative}.sub-nav-menu{position:absolute;top:2.8rem;left:0;width:200px;margin:0;border-radius:5px;padding:0.5rem 0}.sub-nav-item{font-size:1rem;text-align:left;padding:0.5rem 1rem}.book-appointment{background-color:#224036;color:#fff;padding:1rem 1.75rem;border-radius:4px;margin-left:2.5rem;font-weight:800;transition:background-color 0.3s}.book-appointment:hover{background-color:#36705e}}.hero-section{position:relative;width:100%;height:95vh;display:flex;justify-content:center;align-items:flex-start;background-color:#f0f0f0}.hero-section::before{content:"";position:absolute;top:0;left:0;width:100%;height:100%;background:linear-gradient(to right,rgba(0,0,0,0.8),rgba(0,0,0,0.4),rgba(0,0,0,0.8));z-index:1;pointer-events:none}.hero-section img{position:absolute;top:0;left:0;width:100%;height:fit-content;object-fit:cover;object-position:center center}.hero-content{margin:30px 20px;position:relative;text-align:center;color:#fff;font-family:Arial,sans-serif;display:flex;flex-direction:column;align-items:center;min-height:95vh;z-index:2}.hero-content-title{margin:0;position:relative;text-align:center;color:#fff;font-family:Arial,sans-serif;display:flex;flex-direction:row;align-items:center}.company-name{font-size:0.7rem;font-weight:lighter;letter-spacing:1.5px;margin:0 12px}.line{width:60px;height:1px;background-color:rgba(255,255,255,0.5);margin:20px}.slogan{font-size:1.25rem;font-weight:bold;text-shadow:2px 2px 4px rgba(0,0,0,0.7);letter-spacing:1.5px}.subslogan{font-weight:bold;text-shadow:2px 2px 4px rgba(0,0,0,0.7);letter-spacing:1.5px}.hero-paragraph{font-size:1.2rem;line-height:1.6;margin:50px 0;color:#fff;text-shadow:2px 2px 4px rgba(0,0,0,0.7)}.cta-button{display:inline-block;padding:12px 24px;font-size:1rem;font-weight:bold;color:#fff;background-color:rgb(87,128,124);border-radius:25px;text-decoration:none;transition:background-color 0.3s}.cta-button:hover{background-color:#4a8f78}@media (min-width:481px) and (max-width:768px){.hero-section{height:95vh}.company-name{font-size:2.5rem}}@media (min-width:992px){.hero-section{height:100vh}.company-name{font-size:3rem}.hero-content{justify-content:center}}</style>
+
+     <script type="application/ld+json">
+      [
+        {
+          "@context": "https://schema.org",
+          "@type": "Organization",
+          "@id": "https://bcbcarts.com#organization",
+          "name": "BCB Carts",
+          "alternateName": [
+            "bcbcarts",
+            "BCB Carts"
           ],
-          "availableLanguage": [
-            "English"
+          "slogan": "Your Trusted Partner in Leisure-Filled Electric Vehicles",
+          "url": "https://bcbcarts.com",
+          "logo": "https://i.postimg.cc/vT5Y3Jbb/BCBLogo-1.webp",
+          "email": "mebcb@yahoo.com",
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+1-323-333-3471",
+            "contactType": "Customer Service",
+            "areaServed": [
+              "Long Beach",
+              "Seal Beach",
+              "Huntington Beach",
+              "San Pedro",
+              "Lakewood",
+              "Irvine",
+              "Anaheim",
+              "Santa Ana",
+              "Newport Beach",
+              "Costa Mesa",
+              "Cypress",
+              "Buena Park",
+              "La Palma",
+              "La Mirada",
+              "Fullerton",
+              "Garden Grove",
+              "Tustin",
+              "Brea",
+              "La Habra",
+              "Westminster",
+              "Placentia",
+              "Bellflower",
+              "Downey",
+              "Paramount"
+            ],
+            "availableLanguage": [
+              "English"
+            ]
+          },
+          "sameAs": [
+            "https://www.facebook.com/BCBCarts/about",
+            "https://www.facebook.com/profile.php/?id=61550530888896",
+            "https://www.snapchat.com/add/mebcbatyawho",
+            "https://tiktok.com/@bcbcarts",
+            "https://m.youtube.com/@bcbcarts2640",
+            "https://www.pinterest.com/bblackman0408",
+            "https://www.threads.net/@mebcbatyawho",
+            "https://www.instagram.com/mebcbatyawho"
           ]
         },
-        "sameAs": [
-          "https://www.facebook.com/BCBCarts/about",
-          "https://www.facebook.com/profile.php/?id=61550530888896",
-          "https://www.snapchat.com/add/mebcbatyawho",
-          "https://tiktok.com/@bcbcarts",
-          "https://m.youtube.com/@bcbcarts2640",
-          "https://www.pinterest.com/bblackman0408",
-          "https://www.threads.net/@mebcbatyawho",
-          "https://www.instagram.com/mebcbatyawho"
-        ]
-      },
-      {
-        "@context": "https://schema.org",
-        "@type": "WebSite",
-        "name": "BCB Carts",
-        "alternateName": [
-          "bcbcarts",
-          "BCB Carts"
-        ],
-        "url": "https://bcbcarts.com",
-        "inLanguage": "en-US",
-        "potentialAction": {
-          "@type": "SearchAction",
-          "target": "https://bcbcarts.com/search?q={search_term_string}",
-          "query-input": "required name=search_term_string"
-        }
-      },
-      {
-        "@context": "https://schema.org",
-        "@type": "LocalBusiness",
-        "name": "BCB Carts - Long Beach",
-        "alternateName": [
-          "bcbcarts - Long Beach",
-          "BCB Carts - Long Beach"
-        ],
-        "url": "https://bcbcarts.com",
-        "image": "https://www.bcbcarts.com/BCBLogo.jpg",
-        "hasMap": "https://maps.google.com/?q=33.7701,-118.1937",
-        "serviceArea": {
-          "@type": "GeoCircle",
-          "geoMidpoint": {
+        {
+          "@context": "https://schema.org",
+          "@type": "WebSite",
+          "name": "BCB Carts",
+          "alternateName": [
+            "bcbcarts",
+            "BCB Carts"
+          ],
+          "url": "https://bcbcarts.com",
+          "inLanguage": "en-US",
+          "potentialAction": {
+            "@type": "SearchAction",
+            "target": "https://bcbcarts.com/search?q={search_term_string}",
+            "query-input": "required name=search_term_string"
+          }
+        },
+        {
+          "@context": "https://schema.org",
+          "@type": "LocalBusiness",
+          "name": "BCB Carts - Long Beach",
+          "alternateName": [
+            "bcbcarts - Long Beach",
+            "BCB Carts - Long Beach"
+          ],
+          "url": "https://bcbcarts.com",
+          "image": "https://i.postimg.cc/vT5Y3Jbb/BCBLogo-1.webp",
+          "hasMap": "https://maps.google.com/?q=33.7701,-118.1937",
+          "serviceArea": {
+            "@type": "GeoCircle",
+            "geoMidpoint": {
+              "@type": "GeoCoordinates",
+              "latitude": 33.7701,
+              "longitude": -118.1937
+            },
+            "geoRadius": 25
+          },
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "123 Main Street",
+            "addressLocality": "Long Beach",
+            "addressRegion": "CA",
+            "postalCode": "90802",
+            "addressCountry": "US"
+          },
+          "geo": {
             "@type": "GeoCoordinates",
             "latitude": 33.7701,
             "longitude": -118.1937
           },
-          "geoRadius": 25
-        },
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "123 Main Street",
-          "addressLocality": "Long Beach",
-          "addressRegion": "CA",
-          "postalCode": "90802",
-          "addressCountry": "US"
-        },
-        "geo": {
-          "@type": "GeoCoordinates",
-          "latitude": 33.7701,
-          "longitude": -118.1937
-        },
-        "telephone": "+1-323-333-3471",
-        "openingHours": "Mo-Fr 09:00-18:00",
-        "priceRange": "$$",
-        "keywords": [
-          "Electric Carts Long Beach",
-          "Golf Cart Rentals Huntington Beach",
-          "Electric Vehicle Sales Seal Beach",
-          "Low-Speed Vehicles San Pedro",
-          "Electric Cart Repairs Lakewood",
-          "Custom Golf Carts",
-          "Eco-Friendly Vehicles",
-          "Street-Legal Carts",
-          "Repair & Maintenance"
-        ],
-        "aggregateRating": {
-          "@type": "AggregateRating",
-          "ratingValue": "5",
-          "reviewCount": "25",
-          "bestRating": "5",
-          "worstRating": "1"
-        },
-        "review": [
-          {
-            "@type": "Review",
-            "author": {
-              "@type": "Person",
-              "name": "Dustin N."
-            },
-            "reviewRating": {
-              "@type": "Rating",
-              "ratingValue": "5"
-            },
-            "reviewBody": "BCB Carts provided excellent service! I found them on Instagram and bought a cart for use in Huntington Beach. Highly recommend!"
-          }
-        ]
-      }
-      // Additional JSON-LD entries go here...
-    ]
-    </script>
+          "telephone": "+1-323-333-3471",
+          "openingHours": "Mo-Fr 09:00-18:00",
+          "priceRange": "$$",
+          "keywords": [
+            "Electric Carts Long Beach",
+            "Golf Cart Rentals Huntington Beach",
+            "Electric Vehicle Sales Seal Beach",
+            "Low-Speed Vehicles San Pedro",
+            "Electric Cart Repairs Lakewood",
+            "Custom Golf Carts",
+            "Eco-Friendly Vehicles",
+            "Street-Legal Carts",
+            "Repair & Maintenance"
+          ],
+          "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "5",
+            "reviewCount": "25",
+            "bestRating": "5",
+            "worstRating": "1"
+          },
+          "review": [
+            {
+              "@type": "Review",
+              "author": {
+                "@type": "Person",
+                "name": "Dustin N."
+              },
+              "reviewRating": {
+                "@type": "Rating",
+                "ratingValue": "5"
+              },
+              "reviewBody": "BCB Carts provided excellent service! I found them on Instagram and bought a cart for use in Huntington Beach. Highly recommend!"
+            }
+          ]
+        }
+      ]
+      </script>
+      
   </head>
   
   <body>
